# RigidBodyPhysics-Simulator

./: .gitignore  Doxyfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
cpp/: CMakeLists.txt
cpp/include/math/: Transform.hpp  Vector2.hpp
cpp/include/physics/: BoxCollider.hpp  CircleCollider.hpp  Collider.hpp  CollisionDetection.hpp  CollisionResponse.hpp  Constraint.hpp  DistanceConstraint.hpp  Manifold.hpp  PhysicsWorld.hpp  RigidBody.hpp
cpp/src/bindings/: bindings.cpp
cpp/src/math/: Transform.cpp  Vector2.cpp
cpp/src/physics/: BoxCollider.cpp  CircleCollider.cpp  Collider.cpp  CollisionDetection.cpp  CollisionResponse.cpp  DistanceConstraint.cpp  PhysicsWorld.cpp  RigidBody.cpp
demos/: .gitkeep  README.md
docs/: 01_Vector2_Documentation.md  02_Transform_Documentation.md  03_RigidBody_Documentation.md  04_Collider_CircleCollider_Documentation.md  05_PhysicsWorld_Documentation.md  06_Collision_System_Documentation.md  07_Python_Bindings_Documentation.md  08_BoxCollider_Documentation.md  09_Interactive_Physics_Builder.md  10_Constraint_System_Documentation.md  11_Newtons_Cradle_Example.md  README_API_DOCS.md  README_HOSTING.md
python/docs/api/source/: conf.py  index.rst  modules.rst  physics_viz.rst
python/examples/: ball_pit.py  balls_chamber.py  bouncing_balls.py  momentum_transfer.py  newtons_cradle.py  physics_builder.py  pyramid.py  sandbox.py  test_bindings.py  test_box_collider.py  test_visualization.py
python/physics_viz/: __init__.py  camera.py  gif_recorder.py  renderer.py  simulation.py
scripts/: auto_record_gifs.py  record_all_demos.py  record_demo.py  record_gifs.py
tests/cpp/: test_collider.cpp  test_collision.cpp  test_physicsworld.cpp  test_rigidbody.cpp  test_transform.cpp  test_vector2.cpp
